# LQR-ROS

./: README.md
lqr_obsavoid/: CMakeLists.txt  package.xml
lqr_obsavoid/include/: NewtonRaphson.h  PseudoInverse.h  Timer.h  are_solver.h  control_saturation_constraint.h  control_saturation_constraint.hpp  dynamic_system.h  dynamic_system.hpp  dynamic_system_constraint.h  dynamic_system_constraint.hpp  husky_collision_constraint.h  husky_system.h  integrationmethod.h  ivp_solver.h  linearsystem.h  linearsystem.hpp  lqr_obsavoid.h  precisionCalendar.h  r3tensor.h  r3tensor.hpp  superellipsoid_keepout.h  trajectory.h  tspan.h  utilities.h
lqr_obsavoid/launch/: gazebo_simulate.launch  lqr_obsavoid.launch  mpc_autonav.launch~
lqr_obsavoid/src/: NewtonRaphson.cpp  PseudoInverse.cpp  Timer.cpp  are_solver.cpp  husky_collision_constraint.cpp  husky_system.cpp  integrationmethod.cpp  ivp_solver.cpp  lqr_obsavoid.cpp  precisionCalendar.cpp  superellipsoid_keepout.cpp
