<?xml version="1.0"?>
<package>
  <name>lqr_obsavoid</name>
  <version>0.0.0</version>
  <description>The lqr_obsavoid package</description>

  <maintainer email="arunabhmishra@hotmail.com">Arunabh Mishra</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->


<!-- One license tag required, multiple allowed, one license per tag -->
<!-- Commonly used license strings: -->
<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>BSD</license>


<!-- Url tags are optional, but mutiple are allowed, one per tag -->
<!-- Optional attribute type can be: website, bugtracker, or repository -->
<!-- Example: -->
<!-- <url type="website">http://wiki.ros.org/geobot_navigation</url> -->


<!-- Author tags are optional, mutiple are allowed, one per tag -->
<!-- Authors do not have to be maintianers, but could be -->
<!-- Example: -->
<!-- <author email="jane.doe@example.com">Jane Doe</author> -->


<!-- The *_depend tags are used to specify dependencies -->
<!-- Dependencies can be catkin packages or system dependencies -->
<!-- Examples: -->
<!-- Use build_depend for packages you need at compile time: -->

<!-- Use buildtool_depend for build tool packages: -->
<!--   <buildtool_depend>catkin</buildtool_depend> -->
<!-- Use run_depend for packages you need at runtime: -->

<!-- Use test_depend for packages you need only for testing: -->
<!--   <test_depend>gtest</test_depend> -->

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>tf</build_depend>
<build_depend>tf2</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>velodyne_msgs</build_depend>
<build_depend>eigen</build_depend>
<build_depend>libpcl-all-dev</build_depend>
<build_depend>cmake_modules</build_depend>
<!--<build_depend>cv_bridge</build_depend>
<build_depend>image_transport</build_depend>-->
<build_depend>OpenCV</build_depend>


<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>nav_msgs</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>tf</run_depend>
<run_depend>tf2</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>velodyne_msgs</run_depend>
<run_depend>eigen</run_depend>
<run_depend>libpcl-all</run_depend>
<run_depend>cmake_modules</run_depend>
<!--<run_depend>cv_bridge</run_depend>
<run_depend>image_transport</run_depend>-->
<run_depend>OpenCV</run_depend>

<!-- The export tag contains other, unspecified, tags -->
<export>
  <!-- Other tools can request additional information be placed here -->

</export>
</package>
